fix spacing on laptop

--- a/src/styles/categorial-buttons.scss
+++ b/src/styles/categorial-buttons.scss
@@ -3,7 +3,7 @@
 }*/
 
 .categorial-buttons {
-  margin-top: 1em;
+  margin-top: 10px;
 }
 
 .button-category {
