--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -4,7 +4,8 @@ header {
   justify-content: space-between;
 
   width: 996px;
-  margin-bottom: 80px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .vis-controls {
